# esp32_wifi_weather_time

./: README.en.md  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  app_ui.c  idf_component.yml  main.c
main/app/: audio.c  audio.h  guitask.c  guitask.h  time_sync.c  time_sync.h  weather.c  weather.h
